# v-hsc-ros-bridge

./: Dockerfile  LICENSE  README.md
src/ros_bridge/: CMakeLists.txt  Dockerfile  package.xml
src/ros_bridge/include/ros_bridge/robot_client/: robot_client.hpp
src/ros_bridge/misc/: myprotobuf.cmake
src/ros_bridge/resources/: devices.json  joints.json
src/ros_bridge/src/: webots_controller.cpp
src/ros_bridge/src/robot_client/: robot_client.cpp
